--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>
             Portfolio
         </title>
-        <link href="css/style.css" rel="stylesheet" >
+        <link href="CSS/style.css" rel="stylesheet" >
     </head>
     <body>
         <header class="navigation">
